Fix jqx grid overflow on jqx window

--- a/packages/frontend/src/styles/main.scss
+++ b/packages/frontend/src/styles/main.scss
@@ -53,6 +53,10 @@ body {
   padding: 6px;
 }
 
+.jqx-window {
+  max-height: 90vh !important;
+}
+
 .main-tabs {
   height: calc(100vh - 1.1rem) !important;
   .jqx-tabs-content-element {
